--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <!--Carousel end-->
 
 <!--card smartphone start-->
-<div class="container smartphone" id="smartphone">
+<div class="container-smartphone" id="smartphone">
   <h3>SmartPhone</h3>
 <div class="card-deck">
 
@@ -143,7 +143,7 @@
 
 
 <!--card laptop start-->
-<div class="container laptop" id="laptop">
+<div class="container-laptop" id="laptop">
   <h3>Laptop</h3>
 <div class="card-deck">
 
@@ -185,10 +185,10 @@
   </div>
 
 <div class="container">
-  <div class="row">
+  <div class="row align-items-center">
 
     <div class="col-md-3">
-      <div class="cat-bg text-center bag d-flex align-items-center">
+      <div class="cat-bg text-center bag">
       <img class="cat-img" src="hot-gadgets/Categories/bag.png" alt="bag">
       <h5 class="cat-title">Bag</h5>
     </div>
